--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -8,9 +8,7 @@
       "resources": {
         "files": [
           "/favicon.ico",
-          "/index.csr.html",
           "/index.html",
-          "/manifest.webmanifest",
           "/*.css",
           "/*.js"
         ]
@@ -22,22 +20,25 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+          "/assets/**",
+          "/media/*",
+          "/icons/*",
+          "/*.(svg|cur|jpg|jpeg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
     }
   ],
   "dataGroups": [
     {
-      "name": "music",
+      "name": "playlist-api",
       "urls": [
-        "/assets/music/*.mp3",
-        "/assets/music/*.jpg"
+        "/assets/playlist.json"
       ],
       "cacheConfig": {
-        "maxSize": 50,
-        "maxAge": "7d",
-        "strategy": "performance"
+        "strategy": "freshness",
+        "maxSize": 5,
+        "maxAge": "1h",
+        "timeout": "5s"
       }
     }
   ]
